@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- $Id$ -->
-<metafile version="1.6" client="administrator">
+<metafile version="1.7" client="administrator">
 	<name>English (United Kingdom)</name>
-	<version>1.6.2</version>
+	<version>1.7.0</version>
 	<creationDate>2008-03-15</creationDate>
 	<author>Joomla! Project</author>
 	<authorEmail>admin@joomla.org</authorEmail>
